<resources>
    <string name="app_name">Outreach</string>
    <string name="all">All</string>
    <string name="music">Music</string>
    <string name="religious">Religious</string>
    <string name="community">Community</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="eventimage">EventImage</string>
    <string name="some_event_title">Some Event Title</string>
    <string name="_01_01_2021_12_00pm_cst">01/01/2021 | 12:00pm CST</string>
    <string name="free">Free</string>
    <string name="sorry_no_events_found_nearby">Sorry, no events found nearby.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="event_details">Event Details</string>
    <string name="event_image">Event Image</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="cost">Cost</string>
    <string name="distance">Distance</string>
    <string name="_5mi">5mi.</string>
    <string name="_500mi">500mi.</string>
    <string name="placeholder_date">January 1, 2020 - December 1, 2021</string>
    <string name="cloud_saving">Cloud Saving</string>
    <string name="search_settings">Search Settings</string>
    <string name="date_range">Date Range</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="or">- OR -</string>
    <string name="background">Background</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>